--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
   "require": {
     "symfony/console": "^4.0",
     "symfony/config": "^4.0",
-    "symfony/dependency-injection": "^4.0",
+    "symfony/dependency-injection": "^4.1.2",
     "symfony/yaml": "^4.0",
-    "dragonmantank/cron-expression": "^2.0",
     "symfony/dotenv": "^4.0",
     "symfony/property-access": "^4.0",
-    "symfony/finder": "^4.0"
+    "symfony/finder": "^4.0",
+    "dragonmantank/cron-expression": "^2.0"
   },
   "require-dev": {
     "symfony/var-dumper": "^4.0",
